// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots checked false 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots checked true 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1t8mno4=""
      >
        <div
          data-css-4g7l16=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots click large toggles 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots click small toggles 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1m9fpc5=""
      >
        <div
          data-css-1qt5hlf=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots color blue 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1yognj7=""
      >
        <div
          data-css-4g7l16=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots color green 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1ecl5dy=""
      >
        <div
          data-css-4g7l16=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots color orange 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={true}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1t8mno4=""
      >
        <div
          data-css-4g7l16=""
        />
      </div>
    </div>
    <input
      checked={true}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots disabled false 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots disabled true 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-1yf296h=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots error false 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
  </button>
</div>
`;

exports[`Storyshots error true 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-11lyqbs=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Clickable in error state
    </label>
  </button>
</div>
`;

exports[`Storyshots error true w/ disabled 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-1yf296h=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <div
      data-css-11lyqbs=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Such errors
    </label>
  </button>
</div>
`;

exports[`Storyshots label large left 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-1u14hec=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-aau49w=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots label large right 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots label small left 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-1u14hec=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1m9fpc5=""
      >
        <div
          data-css-1qt5hlf=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1waj6du=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots label small right 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1m9fpc5=""
      >
        <div
          data-css-1qt5hlf=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-6olsyv=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots size large 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1rncajx=""
      >
        <div
          data-css-1nqr5a6=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-1wrf03j=""
    >
      Click me
    </label>
  </button>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-claeju=""
>
  <button
    aria-checked={false}
    data-css-nq9iqf=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    role="checkbox"
    tabIndex={0}
  >
    <div
      data-css-480533=""
    >
      <div
        data-css-1m9fpc5=""
      >
        <div
          data-css-1qt5hlf=""
        />
      </div>
    </div>
    <input
      checked={false}
      data-css-6wu9td=""
      readOnly={true}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      data-css-6olsyv=""
    >
      Click me
    </label>
  </button>
</div>
`;
